[package]
name = "earth-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
image = "0.25.0"
reqwest = { version = "0.12.2", features = ["blocking"] }
wallpaper = { version = "3.2.0", features = ["from_url"] }
